# PathEditor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  ManagePath.bat  README.md  build_installer.bat  path_list.txt
ico/: resources.rc
include/: callbacks.h  cb_edit.h  cb_file.h  cb_main.h  config.h  globals.h  registry.h  ui.h  ui_utils.h  utils.h
include/controller/: callbacks.h
include/core/: app_context.h  import_export.h  layout_config.h  lua_config.h  path_manager.h  registry_service.h
include/ui/: dialogs.h  main_window.h  ui_utils.h
include/utils/: error_code.h  logger.h  os_env.h  safe_string.h  string_ext.h
lua/: config.lua
src/: callbacks.c  cb_edit.c  cb_file.c  cb_main.c  globals.c  main.c  registry.c  ui.c  ui_utils.c  utils.c
src/controller/: callbacks.c
src/core/: app_context.c  import_export.c  lua_config.c  path_manager.c  registry_service.c
src/ui/: dialogs.c  main_window.c  ui_utils.c
src/utils/: logger.c  os_env.c  safe_string.c  string_ext.c
